--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,27 +9,24 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity">
+        <activity android:name=".ActivitySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" android:label="@string/app_name"/>
-        <activity android:name=".ProfileActivity" android:label="@string/app_name"/>
-        <activity android:name=".ProfileEditActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".GuruUDActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".IndustriUDActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".SiswaUDActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".GuruAddActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".IndustriAddActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".SiswaAddActivity" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog"/>
-        <activity android:name=".GuruListActivity" android:label="@string/app_name"/>
-        <activity android:name=".IndustriListActivity" android:label="@string/app_name"/>
-        <activity android:name=".SiswaListActivity" android:label="@string/app_name"/>
-        <activity android:name=".RegisterActivity" android:label="@string/app_name"/>
-        <activity android:name=".LoginActivity" android:label="@string/app_name"/>
+        <activity android:name=".ActivityProfile" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ActivityMainPage" android:label="@string/app_name"/>
+        <activity android:name=".ActivityRegist" android:label="@string/app_name"/>
+        <activity android:name=".ActivityLogin" android:label="@string/app_name"/>
+        <activity android:name=".ActivityProfileEdit" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog.NoActionBar"/>
     </application>
 
 </manifest>
