--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
         <activity android:name=".ActivityRegist" android:label="@string/app_name"/>
         <activity android:name=".ActivityLogin" android:label="@string/app_name"/>
         <activity android:name=".ActivityDaftarAktivitas" android:label="@string/app_name"/>
-        <activity android:name=".ActivityProfileEdit" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog.NoActionBar"/>
-        <activity android:name=".ActivityDaftarAktivitasAdd" android:label="@string/app_name" android:theme="@android:style/Theme.DeviceDefault.Dialog.NoActionBar"/>
+        <activity android:name=".ActivityProfileEdit" android:label="@string/app_name" android:theme="@style/Theme.MyDialog"/>
+        <activity android:name=".ActivityDaftarAktivitasAdd" android:label="@string/app_name" android:theme="@style/Theme.MyDialog"/>
+        <activity android:name=".ActivityDaftarAktivitasUpdateDelete" android:label="@string/app_name" android:theme="@style/Theme.MyDialog"/>
     </application>
 
 </manifest>
